--- a/src/index.html
+++ b/src/index.html
@@ -11,6 +11,12 @@
   </head>
   <body>
     <div class="main">
+      <div class="image">
+        <img
+          src="https://upload.wikimedia.org/wikipedia/commons/thumb/b/b6/Image_created_with_a_mobile_phone.png/640px-Image_created_with_a_mobile_phone.png"
+          alt="Most"
+        />
+      </div>
       <div class="emoji mb-6">💣🤯💥</div>
       <button class="button">Boom?</button>
     </div>
